# seal_project

./: .gitignore  CMakeLists.txt  README.md  overflow_test.cpp  overflow_trap_demo.cpp
multiplication_injection/: multiplication_injection.cpp  noise_budget_attack.cpp
multiply_by_2_attack/: multiply_by_2_test.cpp
overflow+test/: overflow_test.cpp
simple_encrypt/: simple_encrypt.cpp
